# gendiff

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff.py  engine.py  file_parse.py  formatter.py  read_file.py  reader.py
gendiff/formaters/: diff.py  format_data.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: expected_test.py  test_gendiff.py
tests/fixtures/: expected_test.py
